Made necessary changes from First review. Committing for review.

--- a/XYZReader/src/main/res/layout/activity_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_article_detail.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:fitsSystemWindows="true"
-        style="@style/appbar_elevation"
+        style="@style/appbar_style"
         android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
