--- a/XYZReader/src/main/res/values-sw600dp/dimens.xml
+++ b/XYZReader/src/main/res/values-sw600dp/dimens.xml
@@ -6,5 +6,9 @@
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.3</item>
     <dimen name="fab_margin">24dp</dimen>
     <dimen name="detail_photo_top_margin">4dp</dimen>
+    <dimen name="app_bar_elevation">4dp</dimen>
+
+    <dimen name="fab_default_elevation">6dp</dimen>
+    <dimen name="fab_press_translation_z">12dp</dimen>
 
 </resources>
