--- a/XYZReader/src/main/res/values-v21/styles.xml
+++ b/XYZReader/src/main/res/values-v21/styles.xml
@@ -7,12 +7,12 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="appbar_elevation">
-        <item name="android:elevation">16dp</item>
+    <style name="appbar_style">
+        <item name="android:elevation">@dimen/app_bar_elevation</item>
     </style>
 
-    <style name="fab_elevation">
-        <item name="android:elevation">8dp</item>
+    <style name="fab_animator">
+        <item name="android:stateListAnimator">@animator/fab_state_list_anim</item>
     </style>
 
 
